--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,16 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.content {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.content * {
+  max-width: 200px;
 }
 
 img {
