--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content {
+  display: flex;
+  flex: 1 1 auto;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  flex: 0 1 auto;
+  display: flex;
+  align-items: center;
+  font-weight: bolder;
+  font-size: large;
+  padding-left: 20px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  flex: 0 1 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex: 1 0 auto;
+  padding: 20px;
+}
+
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  font-size: 24px;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  color: rgb(216, 216, 216);
+  text-decoration: none;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  height: 300px;
+  flex: 0 1 auto;
+  padding: 20px;
+} 
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  justify-content: space-evenly;
+  align-content: space-evenly;  
 }
